Start adding tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,12 @@ dependencies = [
     "typer[all]",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest",
+    "pytest-cov"
+]
+
 [project.urls]
 Homepage = "https://github.com/sheriferson/scrobble"
 
