--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
-name: scrobble
+name: scrobble tests
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -24,3 +24,8 @@ jobs:
         run: |
           pip install pytest pytest-cov
           pytest --cov=scrobble --cov-report=xml --cov-report=html
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
